<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/splash_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:layout_weight="0.20"
        android:gravity="center"
        android:text="@string/welcome"
        android:textColor="@android:color/white"
        android:textSize="22sp"
        android:textStyle="bold" />

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="50dp"
        android:layout_marginTop="16dp"
        android:indeterminateDrawable="@drawable/progress"
        android:indeterminateOnly="true"
        android:visibility="visible" />

    <ImageView
        android:id="@+id/ic_launcher"
        android:layout_width="134dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.08"
        android:contentDescription="@string/loginInfo"
        android:src="@drawable/ic_launcher" />

    <AbsoluteLayout
        android:layout_width="wrap_content"
        android:layout_height="80dp" >
    </AbsoluteLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="0dip"
        
        android:layout_weight="0.20"
        android:gravity="center"
        android:text="@string/app_copyright"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

</LinearLayout>