<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#DDDDDD"
    android:orientation="vertical" >

    <RelativeLayout
        style="@style/splash_screen"
        android:layout_width="fill_parent"
        android:layout_height="100sp"
        android:layout_gravity="center"
        android:gravity="center"
        android:height="20sp" >

        <ImageView
            android:id="@+id/logo"
            android:layout_width="80dp"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:contentDescription="logo"
            android:gravity="center"
            android:src="@drawable/logoexcestu" />

        <TextView
            android:id="@+id/loginIntro"
            style="@style/header_text"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:text="@string/loginInfo"
            android:textAlignment="center" />
    </RelativeLayout>

    <RelativeLayout
        style="@style/splash_screen"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="0.16"
        android:height="0dp" >

        <Button
            android:id="@+id/signup"
            style="@style/button_small"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="68dp"
            android:onClick="onClick"
            android:text="@string/btn_signup" />

        <com.facebook.widget.LoginButton
            android:id="@+id/authButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/signin"
            android:layout_marginTop="21dp" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sign_in_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/authButton"
            android:layout_centerVertical="true" >

        </com.google.android.gms.common.SignInButton>

        <EditText
            android:id="@+id/passwordUser"
            android:layout_width="200dp"
            android:layout_height="40sp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/username"
            android:ems="10"
            android:hint="password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:maxLength="12"
            android:padding="4dp"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/username"
            android:layout_width="200dp"
            android:layout_height="40sp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:ems="10"
            android:hint="username"
            android:imeOptions="actionNext"
            android:inputType="textAutoComplete"
            android:maxLength="30"
            android:padding="4dp"
            android:textSize="20sp" >

            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/signin"
            style="@style/button_small"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/passwordUser"
            android:layout_below="@+id/passwordUser"
            android:onClick="onClick"
            android:text="@string/btn_signin" />

    </RelativeLayout>

</LinearLayout>